<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#FBF29B">

    <TextView
        android:id="@+id/tvQcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_number"
        android:textColor="@color/wrong"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SelectedOption" />

        <TextView
            android:id="@+id/tvCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CorrectAnswer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingTop="30dp"

        >

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_height="wrap_content"
            android:textColor="#FF5722"
            android:gravity="center"
            android:text="@string/tvQuestion1"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.159" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/tvQA"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/tvQuestion_1A"
            android:textColor="#000"
            android:background="@color/common"/>

        <TextView
            android:id="@+id/tvQB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/tvQuestion_1B"
            android:textSize="20dp"
            android:textColor="#000"
            android:background="@color/common"

            />

        <TextView
            android:id="@+id/tvQC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/tvQuestion_1C"
            android:textSize="20dp"
            android:textColor="#000"
            android:background="@color/common"/>

        <TextView
            android:id="@+id/tvQD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/tvQuestion_1D"
            android:textSize="20dp"
            android:textColor="#000"
            android:background="@color/common"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="#FFCC35"
            android:text="Siguiente"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="15dp"
            android:text="@string/score"
            android:textColor="@color/wrong"
            android:textSize="20sp"

            />

        <ProgressBar
            android:id="@+id/Prbar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#FFC107"


            />
    </LinearLayout>

</LinearLayout>